log/build_2023-09-15_23-41-27/hw1_py_pubsub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/srooney/Documents/rbe500/hw1/install/hw1_py_pubsub/lib/python3.10/site-packages/hw1_py_pubsub/rooney_publisher.py", line 24
    def main(args=None)
                       ^
SyntaxError: expected ':'

